syntax = "proto3";
option java_multiple_files = true;

package com.instructionnetwork.systemevents;

message ActionsRequest {
    string timestamp = 1;
    string microservice = 2;
    string actionType = 3;
    string resourceName = 4;
    string responseType = 5;
}
message ActionsResponse {
    string status = 1;
}
service SystemEventsService {
    rpc save(ActionsRequest) returns (ActionsResponse);
}